--- a/todos/templates/todos/update.html
+++ b/todos/templates/todos/update.html
@@ -8,11 +8,11 @@
 <body>
     <main>
         <div>
-            <h1>Create a new list</h1>
+            <h1>Update list</h1>
             <form method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button>Create</button>
+                <button>Update</button>
             </form>
         </div>
     </main>
