--- a/todos/templates/todos/detail.html
+++ b/todos/templates/todos/detail.html
@@ -12,6 +12,9 @@
             <p>
                 <a href="{% url 'todo_list_update' todo_item.id %}">Edit</a>
             </p>
+            <p>
+                <a href="{% url 'todo_list_delete' todo_item.id %}">Delete</a>
+            </p>
         </div>
 
         <h2>Tasks</h2>
