--- a/todos/templates/todos/list.html
+++ b/todos/templates/todos/list.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <main>
-        <h1>My Lists</h1>
+        <div>
+            <h1>My Lists</h1>
+        </div>
+
         <div>
             <p>
             <a href="{% url 'todo_list_create' %}">Create a new list</a>
